Closed Bug 118415 Opened 24 years ago Closed 23 years ago

[PATCH] Can't change position property value to/from "absolute"

Categories

(Core :: Layout, defect, P1)

defect

Tracking

()

VERIFIED FIXED
mozilla0.9.9

People

(Reporter: tfriesen, Assigned: attinasi_layout)

References

Details

(Keywords: regression, testcase, topembed)

Attachments

(3 files)

It seems that you can't change the position property value to absolute. And if you have the property value set to absolute in the styling and then try changing it,the browser freezes up. This use to work in NS 6.2
same with 2002010506/linux
Summary: Can't change position property value to/from "absolute" → Can't change position property value to/from "absolute"
*** Bug 123098 has been marked as a duplicate of this bug. ***
Confirming, and reassigning over to Layout.
Assignee: jst → attinasi
Status: UNCONFIRMED → NEW
Component: DOM Style → Layout
Ever confirmed: true
OS: Windows ME → All
QA Contact: ian → petersen
Hardware: PC → All
*** Bug 122818 has been marked as a duplicate of this bug. ***
Target Milestone: --- → mozilla1.1
Seems like a critical bug to fix. Without it the HTML W3C DOM is pretty useless.
As I said in bug #123098 You can still set the position to absolute But the element needs to be off the document when this is done. I think most people usually set the position when a new element is created. You just need to make sure you don't put the element on the document before setting the position.
Unless the use of IE is being promoted, I would urge that this bug be fixed before the next branch that the next release of Netscape will be based on. Although most sites may set the position before the element will be added to the document tree, there will be some site that don't such as the popular one mentioned in bug 122818. For most sites, the number of users using Netscape 6.x or Mozilla is minicule and is not worth the development resources to work around Mozilla bugs. I think enough damage was done with Netscape 6.0.
Second Ken Mori's comment. I wanted to use TurboTax online with Mozilla but was not able to in large part because of this bug.
Unsetting milestone, this should really be fixed for mozilla1.0.
Target Milestone: mozilla1.1 → ---
Marking nsbeta1+
Keywords: nsbeta1nsbeta1+
Target Milestone: --- → mozilla0.9.9
Adding testcase keyword
Keywords: testcase
Is this only affecting the TurboTax? Adding chrisn and aruner.
Keywords: topembed
Priority: -- → P1
I see the problem. We are destroying the style rules for the element before we have destroyed to old frames, so we don't kow that the old frames were absolutely positioned and we leave the placeholders around. Make sense? ;) The fix, I think, is to avoid blowing away the style data when an attribute changed notification comes through, resulting in a reframe, until after the old frames are destroyed, but before the new frames are created. BTW: there are other bugs on this, I see the assertion about the frame not being in the line list and I have seen that before. The reason is that the frame being checked is the positioend frame, not the placeholder as it shoudl be.
Status: NEW → ASSIGNED
>Seems like a critical bug to fix. Without it the HTML W3C DOM is pretty >useless. :) Well, there are other things in the DOM that _do_ work, so I don't think I'd say this bug renders it useless. But, I understand your concern Ken, and it looks like this is probably fixed by my patch.
Summary: Can't change position property value to/from "absolute" → [PATCH] Can't change position property value to/from "absolute"
Blocks: 123946
Assignee: attinasi → attinasi_layout
Status: ASSIGNED → NEW
Comment on attachment 70438 [details] [diff] [review] patch to fix prevent deleting of style information before reframing: fixes problems with positioned and floated frames on attribute changes I'm going to say sr=jst on this one, but someone who really understands this code should give this a thorough review.
Attachment #70438 - Flags: superreview+
I'll try to get Hyatt to review it, he understands the code, but may not be available.
Status: NEW → ASSIGNED
Comment on attachment 70438 [details] [diff] [review] patch to fix prevent deleting of style information before reframing: fixes problems with positioned and floated frames on attribute changes r=kmcclusk@netscape.com
Attachment #70438 - Flags: review+
Comment on attachment 70438 [details] [diff] [review] patch to fix prevent deleting of style information before reframing: fixes problems with positioned and floated frames on attribute changes a=shaver for 0.9.9.
Attachment #70438 - Flags: approval+
Fix checked: /cvsroot/mozilla/layout/html/style/src/nsCSSFrameConstructor.cpp,v <-- nsCSSFr ameConstructor.cpp new revision: 1.706; previous revision: 1.705
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Verified in the April 22nd (2002-04-22-03).
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: