Fixed big problem trying to change the position property on an absolutely positioned element, was leaving dangling placeholder frame. b=118415, r=kmcclusk, sr=jst a=shaver